--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -1,1 +1,68 @@
 @charset "UTF-8"; 
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+
+html, body {
+    height: 100vh;
+}
+
+body {
+    background: url(../imagens/fundo-madeira.jpg);
+    background-position: top, center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+main {
+    position: relative;
+    height: 100vh;
+    
+}
+
+
+section#telefone {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    height: 80vh;
+    aspect-ratio: 311 / 627;
+    background: url('../imagens/frame-iphone.png'); 
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+iframe#tela {
+    position: relative;
+    top: 62px;
+    left: 17px;
+    width: 208px;
+    height: 365px;
+}
+
+section#redes-sociais {
+    text-align: right;
+}
+
+section#redes-sociais img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.411);
+    box-sizing: border-box;
+}
+
+section#redes-sociais img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.616);
+    transform: translate(-3px, -3%);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.623);
+    transition: transform 0.2s, border 1s;
+}
+
