--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -20,7 +20,7 @@ body {
 }
 main {
     position: relative;
-    height: 100vh;
+    width: 100vw;
 }
 
 
@@ -67,4 +67,6 @@ section#redes-sociais img:hover {
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.623);
     transition: transform 0.2s, border 1s;
 }
+
+
 
